# appointment-guard

./: .env.example  .gitignore  DEPLOYMENT_NEEDED.md  DEPLOYMENT_STATUS.md  DEPLOY_ACTION_ITEMS.md  DEPLOY_BLOCKED.md  DEPLOY_INSTRUCTIONS.md  DEPLOY_NOW.md  Dockerfile  LESSONS-LEARNED.md  QUICK_DEPLOY.md  README.md  __init__.py  add-secret.js  create-patients-providers.sql  create-secret.py  fix-rpc-permissions.sql  intervention_agent.py  main.py  pyproject.toml  railway.toml  requirements.txt  risk_scoring.py  seed-patients-providers.sql  seed-test-data.sql  supabase-rls-policies.sql  supabase-schema.sql  supabase-secure-setup-v2.sql  supabase-secure-setup-v3.sql  supabase-secure-setup.sql  supabase-simple-rls.sql
.github/workflows/: deploy-to-railway.yml  deploy.yml
.railway/: project.json
agents/: __init__.py  base_agent.py
core/: __init__.py  twilio_service.py
