[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "appointment-guard"
version = "1.0.0"
description = "ZenticPro Platform - Dental Industry Module (No-Show Prevention)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "supabase>=2.3.0",
    "twilio>=8.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = [".", "*", "agents*", "core*"]
